--- a/package.json
+++ b/package.json
@@ -12,8 +12,13 @@
     "express": "~4.13.1",
     "hjs": "~0.0.6",
     "morgan": "~1.6.1",
-    "serve-favicon": "~2.3.0",
+    "node-jsx": "^0.13.3",
     "react": "^0.13.3",
-    "node-jsx": "^0.13.3"
+    "reactify": "^1.1.1",
+    "serve-favicon": "~2.3.0"
+  },
+  "devDependencies": {
+    "browserify": "10.1.0",
+    "react-tools": "0.13.2"
   }
 }
