--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "node-jsx": "^0.13.3",
     "react": "^0.13.3",
     "reactify": "^1.1.1",
-    "serve-favicon": "~2.3.0"
+    "serve-favicon": "~2.3.0",
+    "swig": "1.4.2"
   },
   "devDependencies": {
     "browserify": "10.1.0",
